[package]
name = "cocklock"
version = "0.1.0"
edition = "2021"

keywords = ["distributed", "locking", "dls", "cockroachdb", "postgres"]
description = "Implementation of the distributed locking mechanism built on top of Postgres/CockroachDB"

homepage = "https://github.com/hexcowboy/cock-lock"
repository = "https://github.com/hexcowboy/cock-lock"

[dependencies]
postgres = "0.19.3"
tokio-postgres = "0.7.6"
postgres-native-tls = "0.5.0"
native-tls = "0.2.10"
uuid = { version="1.1.2", features=["v4", "fast-rng"] }
