[package]
name = "cocklock"
version = "0.1.0"
authors = ["hexcowboy"]
edition = "2021"

keywords = ["distributed", "locking", "dls", "cockroachdb", "postgres"]
description = "Implementation of the distributed locking mechanism built on top of Postgres/CockroachDB"

repository = "https://github.com/hexcowboy/cocklock"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"

exclude = ["/.github", "/examples"]

[dependencies]
postgres = { version = "0.19", features = ["with-uuid-1"] }
tokio-postgres = "0.7.6"
postgres-native-tls = "0.5.0"
native-tls = "0.2.10"
uuid = { version = "1.0.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
testcontainers = "0.14.0"
